multilabel.rFerns added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ S3method(makeRLearner,cluster.SimpleKMeans)
 S3method(makeRLearner,cluster.XMeans)
 S3method(makeRLearner,cluster.cmeans)
 S3method(makeRLearner,cluster.kmeans)
+S3method(makeRLearner,multilabel.rFerns)
 S3method(makeRLearner,regr.IBk)
 S3method(makeRLearner,regr.bartMachine)
 S3method(makeRLearner,regr.bcart)
@@ -248,6 +249,7 @@ S3method(predictLearner,cluster.SimpleKMeans)
 S3method(predictLearner,cluster.XMeans)
 S3method(predictLearner,cluster.cmeans)
 S3method(predictLearner,cluster.kmeans)
+S3method(predictLearner,multilabel.rFerns)
 S3method(predictLearner,regr.IBk)
 S3method(predictLearner,regr.bartMachine)
 S3method(predictLearner,regr.bcart)
@@ -433,6 +435,7 @@ S3method(trainLearner,cluster.SimpleKMeans)
 S3method(trainLearner,cluster.XMeans)
 S3method(trainLearner,cluster.cmeans)
 S3method(trainLearner,cluster.kmeans)
+S3method(trainLearner,multilabel.rFerns)
 S3method(trainLearner,regr.IBk)
 S3method(trainLearner,regr.bartMachine)
 S3method(trainLearner,regr.bcart)
@@ -615,6 +618,7 @@ export(makePreprocWrapperCaret)
 export(makeRLearner)
 export(makeRLearnerClassif)
 export(makeRLearnerCluster)
+export(makeRLearnerMultilabel)
 export(makeRLearnerRegr)
 export(makeRLearnerSurv)
 export(makeRegrTask)
