--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -95,6 +95,7 @@ Suggests:
     party,
     penalized,
     pls,
+    PMCMR,
     pROC (>= 1.8),
     randomForest,
     randomForestSRC (>= 1.6.1),
