--- a/NAMESPACE
+++ b/NAMESPACE
@@ -502,6 +502,7 @@ export(brier)
 export(capLargeValues)
 export(cindex)
 export(configureMlr)
+export(convertBMRToRankMatrix)
 export(convertMLBenchObjToTask)
 export(createDummyFeatures)
 export(crossval)
@@ -518,6 +519,7 @@ export(fn)
 export(fnr)
 export(fp)
 export(fpr)
+export(friedmanTestBMR)
 export(generateFilterValuesData)
 export(generateLearningCurveData)
 export(generateROCRCurvesData)
@@ -533,7 +535,9 @@ export(getBMRPerformances)
 export(getBMRPredictions)
 export(getBMRTaskIds)
 export(getBMRTuneResults)
+export(getBenchmarkSummaryData)
 export(getConfMatrix)
+export(getCritDifferencesData)
 export(getFailureModelMsg)
 export(getFeatSelResult)
 export(getFilterValues)
@@ -547,6 +551,7 @@ export(getNestedTuneResultsX)
 export(getParamSet)
 export(getProbabilities)
 export(getRRPredictions)
+export(getRankMatrixAsBarData)
 export(getStackedBaseLearnerPredictions)
 export(getTaskCosts)
 export(getTaskData)
@@ -676,6 +681,9 @@ export(normalizeFeatures)
 export(npv)
 export(oversample)
 export(performance)
+export(plotBenchmarkResult)
+export(plotBenchmarkSummary)
+export(plotCritDifferences)
 export(plotFilterValues)
 export(plotFilterValuesGGVIS)
 export(plotLearnerPrediction)
@@ -683,11 +691,13 @@ export(plotLearningCurve)
 export(plotLearningCurveGGVIS)
 export(plotROCRCurves)
 export(plotROCRCurvesGGVIS)
+export(plotRankMatrixAsBar)
 export(plotThreshVsPerf)
 export(plotThreshVsPerfGGVIS)
 export(plotTuneMultiCritResult)
 export(plotTuneMultiCritResultGGVIS)
 export(plotViperCharts)
+export(posthocNemenyiTestBMR)
 export(ppv)
 export(predictLearner)
 export(reimpute)
