--- a/NAMESPACE
+++ b/NAMESPACE
@@ -319,6 +319,7 @@ S3method(print,Learner)
 S3method(print,LearningCurveData)
 S3method(print,Measure)
 S3method(print,OptModel)
+S3method(print,PartialPredictionData)
 S3method(print,Prediction)
 S3method(print,ROCRCurvesData)
 S3method(print,RepCVDesc)
@@ -519,6 +520,7 @@ export(fp)
 export(fpr)
 export(generateFilterValuesData)
 export(generateLearningCurveData)
+export(generatePartialPredictionData)
 export(generateROCRCurvesData)
 export(generateThreshVsPerfData)
 export(getBMRAggrPerformances)
@@ -677,6 +679,8 @@ export(plotFilterValuesGGVIS)
 export(plotLearnerPrediction)
 export(plotLearningCurve)
 export(plotLearningCurveGGVIS)
+export(plotPartialPrediction)
+export(plotPartialPredictionGGVIS)
 export(plotROCRCurves)
 export(plotROCRCurvesGGVIS)
 export(plotThreshVsPerf)
