multilabel classif support, not 100% done

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,8 @@ S3method(getLearnerModel,WrappedModel)
 S3method(getParamSet,BaseWrapper)
 S3method(getParamSet,Learner)
 S3method(getParamSet,character)
+S3method(getPredictionResponse,PredictionMultilabel)
+S3method(getPredictionTruth,PredictionMultilabel)
 S3method(isFailureModel,BaseWrapperModel)
 S3method(isFailureModel,FailureModel)
 S3method(isFailureModel,HomogeneousEnsembleModel)
@@ -48,6 +50,7 @@ S3method(listMeasures,default)
 S3method(makePrediction,TaskDescClassif)
 S3method(makePrediction,TaskDescCluster)
 S3method(makePrediction,TaskDescCostSens)
+S3method(makePrediction,TaskDescMultilabel)
 S3method(makePrediction,TaskDescRegr)
 S3method(makePrediction,TaskDescSurv)
 S3method(makeRLearner,classif.IBk)
@@ -110,6 +113,7 @@ S3method(makeRLearner,cluster.SimpleKMeans)
 S3method(makeRLearner,cluster.XMeans)
 S3method(makeRLearner,cluster.cmeans)
 S3method(makeRLearner,cluster.kmeans)
+S3method(makeRLearner,multilabel.rFerns)
 S3method(makeRLearner,regr.IBk)
 S3method(makeRLearner,regr.bartMachine)
 S3method(makeRLearner,regr.bcart)
@@ -184,6 +188,7 @@ S3method(predictLearner,FeatSelWrapper)
 S3method(predictLearner,FilterWrapper)
 S3method(predictLearner,ModelMultiplexer)
 S3method(predictLearner,MulticlassWrapper)
+S3method(predictLearner,MultilabelWrapper)
 S3method(predictLearner,PreprocWrapper)
 S3method(predictLearner,StackedLearner)
 S3method(predictLearner,TuneWrapper)
@@ -247,6 +252,7 @@ S3method(predictLearner,cluster.SimpleKMeans)
 S3method(predictLearner,cluster.XMeans)
 S3method(predictLearner,cluster.cmeans)
 S3method(predictLearner,cluster.kmeans)
+S3method(predictLearner,multilabel.rFerns)
 S3method(predictLearner,regr.IBk)
 S3method(predictLearner,regr.bartMachine)
 S3method(predictLearner,regr.bcart)
@@ -318,6 +324,8 @@ S3method(print,ImputationDesc)
 S3method(print,Learner)
 S3method(print,LearningCurveData)
 S3method(print,Measure)
+S3method(print,MultilabelModel)
+S3method(print,MultilabelTask)
 S3method(print,OptModel)
 S3method(print,Prediction)
 S3method(print,ROCRCurvesData)
@@ -361,6 +369,7 @@ S3method(trainLearner,FeatSelWrapper)
 S3method(trainLearner,FilterWrapper)
 S3method(trainLearner,ModelMultiplexer)
 S3method(trainLearner,MulticlassWrapper)
+S3method(trainLearner,MultilabelWrapper)
 S3method(trainLearner,OverBaggingWrapper)
 S3method(trainLearner,OversampleWrapper)
 S3method(trainLearner,PreprocWrapper)
@@ -429,6 +438,7 @@ S3method(trainLearner,cluster.SimpleKMeans)
 S3method(trainLearner,cluster.XMeans)
 S3method(trainLearner,cluster.cmeans)
 S3method(trainLearner,cluster.kmeans)
+S3method(trainLearner,multilabel.rFerns)
 S3method(trainLearner,regr.IBk)
 S3method(trainLearner,regr.bartMachine)
 S3method(trainLearner,regr.bcart)
@@ -545,6 +555,8 @@ export(getMlrOptions)
 export(getNestedTuneResultsOptPathDf)
 export(getNestedTuneResultsX)
 export(getParamSet)
+export(getPredictionResponse)
+export(getPredictionTruth)
 export(getProbabilities)
 export(getRRPredictions)
 export(getStackedBaseLearnerPredictions)
@@ -563,6 +575,7 @@ export(getTaskType)
 export(getTuneResult)
 export(gmean)
 export(gpr)
+export(hamloss)
 export(hasProperties)
 export(holdout)
 export(impute)
@@ -609,6 +622,8 @@ export(makeMeasure)
 export(makeModelMultiplexer)
 export(makeModelMultiplexerParamSet)
 export(makeMulticlassWrapper)
+export(makeMultilabelTask)
+export(makeMultilabelWrapper)
 export(makeOverBaggingWrapper)
 export(makeOversampleWrapper)
 export(makePreprocWrapper)
@@ -651,6 +666,7 @@ export(measureFP)
 export(measureFPR)
 export(measureGMEAN)
 export(measureGPR)
+export(measureHAMLOSS)
 export(measureMAE)
 export(measureMCC)
 export(measureMEDAE)
