-renamed getXYZData to generateXYZData -generateData functions now return Objects,  that can be used for plotting. -Updated documentation. -Added UnitTesting for all functions  except the Hypothesis Tests.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -520,9 +520,12 @@ export(fnr)
 export(fp)
 export(fpr)
 export(friedmanTestBMR)
+export(generateBenchmarkSummaryData)
+export(generateCritDifferencesData)
 export(generateFilterValuesData)
 export(generateLearningCurveData)
 export(generateROCRCurvesData)
+export(generateRankMatrixAsBarData)
 export(generateThreshVsPerfData)
 export(getBMRAggrPerformances)
 export(getBMRFeatSelResults)
@@ -535,9 +538,7 @@ export(getBMRPerformances)
 export(getBMRPredictions)
 export(getBMRTaskIds)
 export(getBMRTuneResults)
-export(getBenchmarkSummaryData)
 export(getConfMatrix)
-export(getCritDifferencesData)
 export(getFailureModelMsg)
 export(getFeatSelResult)
 export(getFilterValues)
@@ -551,7 +552,6 @@ export(getNestedTuneResultsX)
 export(getParamSet)
 export(getProbabilities)
 export(getRRPredictions)
-export(getRankMatrixAsBarData)
 export(getStackedBaseLearnerPredictions)
 export(getTaskCosts)
 export(getTaskData)
