--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ branches:
 apt_packages:
     - r-cran-rjava
 r_github_packages:
+    - mllg/checkmate
     - berndbischl/BBmisc
     - berndbischl/parallelMap
     - berndbischl/ParamHelpers
-    - mllg/checkmate
 r_binary_packages:
     - ada
     - adabag
@@ -95,7 +95,8 @@ r_binary_packages:
     - tgp
     - TH.data
 before_script:
-    - sudo Rscript -e 'options(repos = "http://cran.rstudio.com"); tryCatch({ old <- old.packages(); if (!is.null(old)) install.packages(old[, "Package"]) }, error = function(e) { message(e); q(status = 1, save = "no") })'
+    - git clone https://github.com/mllg/travis-r-tools.git travis-r-tools
+    - Rscript travis-r-tools/update-packages.r
     - sudo R CMD javareconf
     - java -cp /usr/local/lib/R/site-library/RWekajars/java/weka.jar weka.core.WekaPackageManager -install-package thirdparty/XMeans1.0.4.zip
 notifications:
