--- a/.travis.yml
+++ b/.travis.yml
@@ -95,8 +95,8 @@ r_binary_packages:
     - tgp
     - TH.data
 before_script:
-    - curl -L -O https://raw.githubusercontent.com/mllg/travis-r-tools/master/update-packages.r
-    - Rscript update-packages.r
+    - curl -L https://raw.githubusercontent.com/mllg/travis-r-tools/master/update-packages.r -o /tmp/update-packages.r
+    - Rscript /tmp/update-packages.r
     - sudo R CMD javareconf
     - java -cp /usr/local/lib/R/site-library/RWekajars/java/weka.jar weka.core.WekaPackageManager -install-package thirdparty/XMeans1.0.4.zip
 notifications:
