Use .Deprecated following guideline (Fix #346)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -560,6 +560,7 @@ export(getParamSet)
 export(getPredictionProbabilities)
 export(getPredictionResponse)
 export(getPredictionTruth)
+export(getProbabilities)
 export(getRRPredictions)
 export(getStackedBaseLearnerPredictions)
 export(getTaskCosts)
