--- a/NAMESPACE
+++ b/NAMESPACE
@@ -697,7 +697,7 @@ export(plotThreshVsPerfGGVIS)
 export(plotTuneMultiCritResult)
 export(plotTuneMultiCritResultGGVIS)
 export(plotViperCharts)
-export(posthocNemenyiTestBMR)
+export(friedmanPostHocTestBMR)
 export(ppv)
 export(predictLearner)
 export(reimpute)
