--- a/NAMESPACE
+++ b/NAMESPACE
@@ -562,12 +562,12 @@ export(getPredictionTruth)
 export(getProbabilities)
 export(getRRPredictions)
 export(getStackedBaseLearnerPredictions)
+export(getTaskClassLevels)
 export(getTaskCosts)
 export(getTaskData)
 export(getTaskDescription)
 export(getTaskFeatureNames)
 export(getTaskFormula)
-export(getTaskFormulaAsString)
 export(getTaskId)
 export(getTaskNFeats)
 export(getTaskSize)
