--- a/NAMESPACE
+++ b/NAMESPACE
@@ -544,6 +544,7 @@ export(getBMRPerformances)
 export(getBMRPredictions)
 export(getBMRTaskIds)
 export(getBMRTuneResults)
+export(getClassWeightParam)
 export(getConfMatrix)
 export(getFailureModelMsg)
 export(getFeatSelResult)
@@ -562,6 +563,7 @@ export(getPredictionTruth)
 export(getProbabilities)
 export(getRRPredictions)
 export(getStackedBaseLearnerPredictions)
+export(getTaskClassLevels)
 export(getTaskCosts)
 export(getTaskData)
 export(getTaskDescription)
