--- a/NAMESPACE
+++ b/NAMESPACE
@@ -188,7 +188,7 @@ S3method(predictLearner,FeatSelWrapper)
 S3method(predictLearner,FilterWrapper)
 S3method(predictLearner,ModelMultiplexer)
 S3method(predictLearner,MulticlassWrapper)
-S3method(predictLearner,MultilabelWrapper)
+S3method(predictLearner,MultilabelBinaryRelevanceWrapper)
 S3method(predictLearner,PreprocWrapper)
 S3method(predictLearner,StackedLearner)
 S3method(predictLearner,TuneWrapper)
@@ -369,7 +369,7 @@ S3method(trainLearner,FeatSelWrapper)
 S3method(trainLearner,FilterWrapper)
 S3method(trainLearner,ModelMultiplexer)
 S3method(trainLearner,MulticlassWrapper)
-S3method(trainLearner,MultilabelWrapper)
+S3method(trainLearner,MultilabelBinaryRelevanceWrapper)
 S3method(trainLearner,OverBaggingWrapper)
 S3method(trainLearner,OversampleWrapper)
 S3method(trainLearner,PreprocWrapper)
@@ -545,6 +545,7 @@ export(getBMRPredictions)
 export(getBMRTaskIds)
 export(getBMRTuneResults)
 export(getConfMatrix)
+export(getDefaultMeasure)
 export(getFailureModelMsg)
 export(getFeatSelResult)
 export(getFilterValues)
@@ -624,8 +625,8 @@ export(makeMeasure)
 export(makeModelMultiplexer)
 export(makeModelMultiplexerParamSet)
 export(makeMulticlassWrapper)
+export(makeMultilabelBinaryRelevanceWrapper)
 export(makeMultilabelTask)
-export(makeMultilabelWrapper)
 export(makeOverBaggingWrapper)
 export(makeOversampleWrapper)
 export(makePreprocWrapper)
