update documentation to make getPredictionTruth/Response work in tutorial

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,11 @@ S3method(getParamSet,BaseWrapper)
 S3method(getParamSet,Learner)
 S3method(getParamSet,character)
 S3method(getPredictionResponse,PredictionMultilabel)
+S3method(getPredictionResponse,default)
+S3method(getPredictionTruth,PredictionCluster)
 S3method(getPredictionTruth,PredictionMultilabel)
+S3method(getPredictionTruth,PredictionSurv)
+S3method(getPredictionTruth,default)
 S3method(isFailureModel,BaseWrapperModel)
 S3method(isFailureModel,FailureModel)
 S3method(isFailureModel,HomogeneousEnsembleModel)
