--- a/NAMESPACE
+++ b/NAMESPACE
@@ -638,6 +638,7 @@ export(makePreprocWrapperCaret)
 export(makeRLearner)
 export(makeRLearnerClassif)
 export(makeRLearnerCluster)
+export(makeRLearnerMultilabel)
 export(makeRLearnerRegr)
 export(makeRLearnerSurv)
 export(makeRegrTask)
