refactored checkTaskCreation and fixupData

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -548,6 +548,7 @@ export(getBMRPerformances)
 export(getBMRPredictions)
 export(getBMRTaskIds)
 export(getBMRTuneResults)
+export(getClassWeightParam)
 export(getConfMatrix)
 export(getDefaultMeasure)
 export(getFailureModelMsg)
@@ -638,6 +639,7 @@ export(makePreprocWrapperCaret)
 export(makeRLearner)
 export(makeRLearnerClassif)
 export(makeRLearnerCluster)
+export(makeRLearnerMultilabel)
 export(makeRLearnerRegr)
 export(makeRLearnerSurv)
 export(makeRegrTask)
