improved oo for tasks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,14 @@ S3method(getPredictionTruth,PredictionCluster)
 S3method(getPredictionTruth,PredictionMultilabel)
 S3method(getPredictionTruth,PredictionSurv)
 S3method(getPredictionTruth,default)
+S3method(getTaskClassLevels,Task)
+S3method(getTaskClassLevels,TaskDescClassif)
+S3method(getTaskClassLevels,TaskDescMultilabel)
+S3method(getTaskDescription,TaskDesc)
+S3method(getTaskDescription,default)
+S3method(getTaskTargetNames,Task)
+S3method(getTaskTargetNames,TaskDescSupervised)
+S3method(getTaskTargetNames,TaskDescUnsupervised)
 S3method(isFailureModel,BaseWrapperModel)
 S3method(isFailureModel,FailureModel)
 S3method(isFailureModel,HomogeneousEnsembleModel)
