added missing export and docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,9 @@ S3method(getTaskDescription,default)
 S3method(getTaskTargetNames,Task)
 S3method(getTaskTargetNames,TaskDescSupervised)
 S3method(getTaskTargetNames,TaskDescUnsupervised)
+S3method(getTaskTargets,CostSensTask)
+S3method(getTaskTargets,SupervisedTask)
+S3method(getTaskTargets,UnsupervisedTask)
 S3method(isFailureModel,BaseWrapperModel)
 S3method(isFailureModel,FailureModel)
 S3method(isFailureModel,HomogeneousEnsembleModel)
