--- a/NAMESPACE
+++ b/NAMESPACE
@@ -527,6 +527,7 @@ export(brier)
 export(capLargeValues)
 export(cindex)
 export(configureMlr)
+export(convertBMRToRankMatrix)
 export(convertMLBenchObjToTask)
 export(createDummyFeatures)
 export(crossval)
@@ -543,10 +544,15 @@ export(fn)
 export(fnr)
 export(fp)
 export(fpr)
+export(friedmanPostHocTestBMR)
+export(friedmanTestBMR)
+export(generateBenchmarkSummaryData)
+export(generateCritDifferencesData)
 export(generateFilterValuesData)
 export(generateLearningCurveData)
 export(generatePartialPredictionData)
 export(generateROCRCurvesData)
+export(generateRankMatrixAsBarData)
 export(generateThreshVsPerfData)
 export(getBMRAggrPerformances)
 export(getBMRFeatSelResults)
@@ -712,6 +718,9 @@ export(normalizeFeatures)
 export(npv)
 export(oversample)
 export(performance)
+export(plotBenchmarkResult)
+export(plotBenchmarkSummary)
+export(plotCritDifferences)
 export(plotFilterValues)
 export(plotFilterValuesGGVIS)
 export(plotLearnerPrediction)
@@ -721,6 +730,7 @@ export(plotPartialPrediction)
 export(plotPartialPredictionGGVIS)
 export(plotROCRCurves)
 export(plotROCRCurvesGGVIS)
+export(plotRankMatrixAsBar)
 export(plotThreshVsPerf)
 export(plotThreshVsPerfGGVIS)
 export(plotTuneMultiCritResult)
