tests for ggplot functions
 - writes to svg, reads in xml, and parses xml to count points, lines,
   bars, and facets

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -115,7 +115,8 @@ Suggests:
     stepPlr,
     testthat,
     tgp,
-    TH.data
+    TH.data,
+    XML
 LazyData: yes
 ByteCompile: yes
 Version: 2.5
