--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ S3method(getHyperPars,BaseEnsemble)
 S3method(getHyperPars,BaseWrapper)
 S3method(getHyperPars,Learner)
 S3method(getLearnerModel,BaseWrapperModel)
+S3method(getLearnerModel,HomogeneousEnsembleModel)
 S3method(getLearnerModel,ModelMultiplexerModel)
 S3method(getLearnerModel,WrappedModel)
 S3method(getParamSet,BaseWrapper)
@@ -326,6 +327,7 @@ S3method(print,Aggregation)
 S3method(print,BaggingModel)
 S3method(print,BaseWrapper)
 S3method(print,BenchmarkResult)
+S3method(print,ChainModel)
 S3method(print,ClassifTask)
 S3method(print,ClusterTask)
 S3method(print,CostSensTask)
