--- a/NAMESPACE
+++ b/NAMESPACE
@@ -572,6 +572,7 @@ export(getHomogeneousEnsembleModels)
 export(getHyperPars)
 export(getLearnerModel)
 export(getMlrOptions)
+export(getMultilabelBinaryPerformances)
 export(getNestedTuneResultsOptPathDf)
 export(getNestedTuneResultsX)
 export(getParamSet)
