--- a/NAMESPACE
+++ b/NAMESPACE
@@ -574,6 +574,7 @@ export(getFailureModelMsg)
 export(getFeatSelResult)
 export(getFilterValues)
 export(getFilteredFeatures)
+export(getHomogeneousEnsembleModels)
 export(getHyperPars)
 export(getLearnerModel)
 export(getMlrOptions)
@@ -584,6 +585,7 @@ export(getParamSet)
 export(getPredictionProbabilities)
 export(getPredictionResponse)
 export(getPredictionTruth)
+export(getProbabilities)
 export(getRRPredictions)
 export(getStackedBaseLearnerPredictions)
 export(getTaskClassLevels)
