--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,14 @@ S3method(getLearnerModel,BaseWrapperModel)
 S3method(getLearnerModel,HomogeneousEnsembleModel)
 S3method(getLearnerModel,ModelMultiplexerModel)
 S3method(getLearnerModel,WrappedModel)
+S3method(getLearnerProperties,BaggingWrapper)
+S3method(getLearnerProperties,BaseWrapper)
+S3method(getLearnerProperties,CostSensClassifWrapper)
+S3method(getLearnerProperties,CostSensWeightedPairsWrapper)
+S3method(getLearnerProperties,ImputeWrapper)
+S3method(getLearnerProperties,MulticlassWrapper)
+S3method(getLearnerProperties,PreprocWrapperCaret)
+S3method(getLearnerProperties,WeightedClassesWrapper)
 S3method(getParamSet,BaseWrapper)
 S3method(getParamSet,Learner)
 S3method(getParamSet,character)
@@ -534,7 +542,6 @@ S3method(trainLearner,surv.rpart)
 export(G1)
 export(G2)
 export(acc)
-export(addProperties)
 export(analyzeFeatSelResult)
 export(asROCRPrediction)
 export(auc)
@@ -599,6 +606,7 @@ export(getFilteredFeatures)
 export(getHomogeneousEnsembleModels)
 export(getHyperPars)
 export(getLearnerModel)
+export(getLearnerProperties)
 export(getMlrOptions)
 export(getMultilabelBinaryPerformances)
 export(getNestedTuneResultsOptPathDf)
@@ -626,7 +634,7 @@ export(getTuneResult)
 export(gmean)
 export(gpr)
 export(hamloss)
-export(hasProperties)
+export(hasLearnerProperties)
 export(holdout)
 export(impute)
 export(imputeConstant)
@@ -763,10 +771,10 @@ export(plotTuneMultiCritResultGGVIS)
 export(plotViperCharts)
 export(ppv)
 export(predictLearner)
+export(predictLearnerProperties.OverBaggingWrapper)
 export(reimpute)
 export(removeConstantFeatures)
 export(removeHyperPars)
-export(removeProperties)
 export(repcv)
 export(resample)
 export(rmse)
@@ -778,7 +786,6 @@ export(setHyperPars2)
 export(setId)
 export(setPredictThreshold)
 export(setPredictType)
-export(setProperties)
 export(setThreshold)
 export(silhouette)
 export(smote)
