add mlp from RSNNS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ S3method(makeRLearner,classif.lqa)
 S3method(makeRLearner,classif.lssvm)
 S3method(makeRLearner,classif.lvq1)
 S3method(makeRLearner,classif.mda)
+S3method(makeRLearner,classif.mlp)
 S3method(makeRLearner,classif.multinom)
 S3method(makeRLearner,classif.naiveBayes)
 S3method(makeRLearner,classif.neuralnet)
@@ -252,6 +253,7 @@ S3method(predictLearner,classif.lqa)
 S3method(predictLearner,classif.lssvm)
 S3method(predictLearner,classif.lvq1)
 S3method(predictLearner,classif.mda)
+S3method(predictLearner,classif.mlp)
 S3method(predictLearner,classif.multinom)
 S3method(predictLearner,classif.naiveBayes)
 S3method(predictLearner,classif.neuralnet)
@@ -445,6 +447,7 @@ S3method(trainLearner,classif.lqa)
 S3method(trainLearner,classif.lssvm)
 S3method(trainLearner,classif.lvq1)
 S3method(trainLearner,classif.mda)
+S3method(trainLearner,classif.mlp)
 S3method(trainLearner,classif.multinom)
 S3method(trainLearner,classif.naiveBayes)
 S3method(trainLearner,classif.neuralnet)
@@ -585,6 +588,7 @@ export(getBMRPerformances)
 export(getBMRPredictions)
 export(getBMRTaskIds)
 export(getBMRTuneResults)
+export(getCaretParamSet)
 export(getClassWeightParam)
 export(getConfMatrix)
 export(getDefaultMeasure)
