--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ S3method(getLearnerProperties,CostSensClassifWrapper)
 S3method(getLearnerProperties,CostSensWeightedPairsWrapper)
 S3method(getLearnerProperties,ImputeWrapper)
 S3method(getLearnerProperties,MulticlassWrapper)
+S3method(getLearnerProperties,OverBaggingWrapper)
 S3method(getLearnerProperties,PreprocWrapperCaret)
 S3method(getLearnerProperties,WeightedClassesWrapper)
 S3method(getParamSet,BaseWrapper)
@@ -771,7 +772,6 @@ export(plotTuneMultiCritResultGGVIS)
 export(plotViperCharts)
 export(ppv)
 export(predictLearner)
-export(predictLearnerProperties.OverBaggingWrapper)
 export(reimpute)
 export(removeConstantFeatures)
 export(removeHyperPars)
