--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ r_binary_packages:
     - elasticnet
     - elmNN
     - emoa
-    - extraTrees
+    # - extraTrees
     - fields
     - flare
     - FNN
