--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,6 +138,7 @@ S3method(makeRLearner,classif.rFerns)
 S3method(makeRLearner,classif.randomForest)
 S3method(makeRLearner,classif.randomForestSRC)
 S3method(makeRLearner,classif.rda)
+S3method(makeRLearner,classif.rknn)
 S3method(makeRLearner,classif.rpart)
 S3method(makeRLearner,classif.rrlda)
 S3method(makeRLearner,classif.saeDNN)
@@ -192,6 +193,7 @@ S3method(makeRLearner,regr.penalized.ridge)
 S3method(makeRLearner,regr.plsr)
 S3method(makeRLearner,regr.randomForest)
 S3method(makeRLearner,regr.randomForestSRC)
+S3method(makeRLearner,regr.rknn)
 S3method(makeRLearner,regr.rpart)
 S3method(makeRLearner,regr.rsm)
 S3method(makeRLearner,regr.rvm)
@@ -287,6 +289,7 @@ S3method(predictLearner,classif.rFerns)
 S3method(predictLearner,classif.randomForest)
 S3method(predictLearner,classif.randomForestSRC)
 S3method(predictLearner,classif.rda)
+S3method(predictLearner,classif.rknn)
 S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.rrlda)
 S3method(predictLearner,classif.saeDNN)
@@ -340,6 +343,7 @@ S3method(predictLearner,regr.penalized.ridge)
 S3method(predictLearner,regr.plsr)
 S3method(predictLearner,regr.randomForest)
 S3method(predictLearner,regr.randomForestSRC)
+S3method(predictLearner,regr.rknn)
 S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
 S3method(predictLearner,regr.rvm)
@@ -484,6 +488,7 @@ S3method(trainLearner,classif.rFerns)
 S3method(trainLearner,classif.randomForest)
 S3method(trainLearner,classif.randomForestSRC)
 S3method(trainLearner,classif.rda)
+S3method(trainLearner,classif.rknn)
 S3method(trainLearner,classif.rpart)
 S3method(trainLearner,classif.rrlda)
 S3method(trainLearner,classif.saeDNN)
@@ -537,6 +542,7 @@ S3method(trainLearner,regr.penalized.ridge)
 S3method(trainLearner,regr.plsr)
 S3method(trainLearner,regr.randomForest)
 S3method(trainLearner,regr.randomForestSRC)
+S3method(trainLearner,regr.rknn)
 S3method(trainLearner,regr.rpart)
 S3method(trainLearner,regr.rsm)
 S3method(trainLearner,regr.rvm)
