update travis.yml for branch with less java [ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
 branches:
     only:
         - master
-        - multiFidPlugIn
+        - ci_nojava
         - task_ops
 warnings_are_errors: true
 apt_packages:
