upgrade to new travis infrastructure (what could possibly go wrong)

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ branches:
         - ci_nojava
         - task_ops
 warnings_are_errors: true
+sudo: false
 apt_packages:
     - r-cran-rjava
     - libgmp-dev
@@ -108,7 +109,7 @@ r_binary_packages:
 before_script:
     - curl -L https://raw.githubusercontent.com/mllg/travis-r-tools/master/update-packages.r -o /tmp/update-packages.r
     - Rscript /tmp/update-packages.r
-    - sudo R CMD javareconf
+    - R CMD javareconf
     - java -cp /usr/local/lib/R/site-library/RWekajars/java/weka.jar weka.core.WekaPackageManager -install-package thirdparty/XMeans1.0.4.zip
 notifications:
   email:
