adds plotROCCurves using to generateThreshVsPerf
 - adds aggregate argument to generateThreshVsPerfData
   which gives performance per iteration or avg performance
   (temporary until #431 fixed)
 - tests/news update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -789,6 +789,7 @@ export(plotLearningCurve)
 export(plotLearningCurveGGVIS)
 export(plotPartialPrediction)
 export(plotPartialPredictionGGVIS)
+export(plotROCCurves)
 export(plotROCRCurves)
 export(plotROCRCurvesGGVIS)
 export(plotRankMatrixAsBar)
