--- a/NAMESPACE
+++ b/NAMESPACE
@@ -792,6 +792,7 @@ export(plotLearningCurve)
 export(plotLearningCurveGGVIS)
 export(plotPartialPrediction)
 export(plotPartialPredictionGGVIS)
+export(plotROCCurves)
 export(plotROCRCurves)
 export(plotROCRCurvesGGVIS)
 export(plotRankMatrixAsBar)
@@ -803,6 +804,7 @@ export(plotViperCharts)
 export(ppv)
 export(predictLearner)
 export(reimpute)
+export(relativeOverfitting)
 export(removeConstantFeatures)
 export(removeHyperPars)
 export(repcv)
