add learners: ranger for regression and survival

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -195,6 +195,7 @@ S3method(makeRLearner,regr.penalized.ridge)
 S3method(makeRLearner,regr.plsr)
 S3method(makeRLearner,regr.randomForest)
 S3method(makeRLearner,regr.randomForestSRC)
+S3method(makeRLearner,regr.ranger)
 S3method(makeRLearner,regr.rknn)
 S3method(makeRLearner,regr.rpart)
 S3method(makeRLearner,regr.rsm)
@@ -212,6 +213,7 @@ S3method(makeRLearner,surv.glmnet)
 S3method(makeRLearner,surv.optimCoxBoostPenalty)
 S3method(makeRLearner,surv.penalized)
 S3method(makeRLearner,surv.randomForestSRC)
+S3method(makeRLearner,surv.ranger)
 S3method(makeRLearner,surv.rpart)
 S3method(makeWrappedModel,BaseEnsemble)
 S3method(makeWrappedModel,BaseWrapper)
@@ -349,6 +351,7 @@ S3method(predictLearner,regr.penalized.ridge)
 S3method(predictLearner,regr.plsr)
 S3method(predictLearner,regr.randomForest)
 S3method(predictLearner,regr.randomForestSRC)
+S3method(predictLearner,regr.ranger)
 S3method(predictLearner,regr.rknn)
 S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
@@ -366,6 +369,7 @@ S3method(predictLearner,surv.glmnet)
 S3method(predictLearner,surv.optimCoxBoostPenalty)
 S3method(predictLearner,surv.penalized)
 S3method(predictLearner,surv.randomForestSRC)
+S3method(predictLearner,surv.ranger)
 S3method(predictLearner,surv.rpart)
 S3method(print,Aggregation)
 S3method(print,BaggingModel)
@@ -552,6 +556,7 @@ S3method(trainLearner,regr.penalized.ridge)
 S3method(trainLearner,regr.plsr)
 S3method(trainLearner,regr.randomForest)
 S3method(trainLearner,regr.randomForestSRC)
+S3method(trainLearner,regr.ranger)
 S3method(trainLearner,regr.rknn)
 S3method(trainLearner,regr.rpart)
 S3method(trainLearner,regr.rsm)
@@ -569,6 +574,7 @@ S3method(trainLearner,surv.glmnet)
 S3method(trainLearner,surv.optimCoxBoostPenalty)
 S3method(trainLearner,surv.penalized)
 S3method(trainLearner,surv.randomForestSRC)
+S3method(trainLearner,surv.ranger)
 S3method(trainLearner,surv.rpart)
 export(G1)
 export(G2)
