refactor relative overfitting stuff (#433)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(createDummyFeatures,SupervisedTask)
 S3method(createDummyFeatures,data.frame)
 S3method(downsample,ResampleInstance)
 S3method(downsample,Task)
+S3method(estimateRelativeOverfitting,ResampleDesc)
 S3method(estimateResidualVariance,Learner)
 S3method(estimateResidualVariance,WrappedModel)
 S3method(generateCalibrationData,BenchmarkResult)
@@ -593,6 +594,7 @@ export(db)
 export(downsample)
 export(dropFeatures)
 export(dunn)
+export(estimateRelativeOverfitting)
 export(estimateResidualVariance)
 export(f1)
 export(fdr)
@@ -804,7 +806,6 @@ export(plotViperCharts)
 export(ppv)
 export(predictLearner)
 export(reimpute)
-export(relativeOverfitting)
 export(removeConstantFeatures)
 export(removeHyperPars)
 export(repcv)
