--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,9 +86,12 @@ S3method(makePrediction,TaskDescSurv)
 S3method(makeRLearner,classif.IBk)
 S3method(makeRLearner,classif.J48)
 S3method(makeRLearner,classif.JRip)
-S3method(makeRLearner,classif.LiblineaRBinary)
-S3method(makeRLearner,classif.LiblineaRLogReg)
-S3method(makeRLearner,classif.LiblineaRMultiClass)
+S3method(makeRLearner,classif.LiblineaRL1L2SVC)
+S3method(makeRLearner,classif.LiblineaRL1LogReg)
+S3method(makeRLearner,classif.LiblineaRL2L1SVC)
+S3method(makeRLearner,classif.LiblineaRL2LogReg)
+S3method(makeRLearner,classif.LiblineaRL2SVC)
+S3method(makeRLearner,classif.LiblineaRMultiClassSVC)
 S3method(makeRLearner,classif.OneR)
 S3method(makeRLearner,classif.PART)
 S3method(makeRLearner,classif.ada)
@@ -157,6 +160,8 @@ S3method(makeRLearner,cluster.cmeans)
 S3method(makeRLearner,cluster.kmeans)
 S3method(makeRLearner,multilabel.rFerns)
 S3method(makeRLearner,regr.IBk)
+S3method(makeRLearner,regr.LiblineaRL2L1SVR)
+S3method(makeRLearner,regr.LiblineaRL2L2SVR)
 S3method(makeRLearner,regr.avNNet)
 S3method(makeRLearner,regr.bartMachine)
 S3method(makeRLearner,regr.bcart)
@@ -241,9 +246,12 @@ S3method(predictLearner,TuneWrapper)
 S3method(predictLearner,classif.IBk)
 S3method(predictLearner,classif.J48)
 S3method(predictLearner,classif.JRip)
-S3method(predictLearner,classif.LiblineaRBinary)
-S3method(predictLearner,classif.LiblineaRLogReg)
-S3method(predictLearner,classif.LiblineaRMultiClass)
+S3method(predictLearner,classif.LiblineaRL1L2SVC)
+S3method(predictLearner,classif.LiblineaRL1LogReg)
+S3method(predictLearner,classif.LiblineaRL2L1SVC)
+S3method(predictLearner,classif.LiblineaRL2LogReg)
+S3method(predictLearner,classif.LiblineaRL2SVC)
+S3method(predictLearner,classif.LiblineaRMultiClassSVC)
 S3method(predictLearner,classif.OneR)
 S3method(predictLearner,classif.PART)
 S3method(predictLearner,classif.ada)
@@ -312,6 +320,8 @@ S3method(predictLearner,cluster.cmeans)
 S3method(predictLearner,cluster.kmeans)
 S3method(predictLearner,multilabel.rFerns)
 S3method(predictLearner,regr.IBk)
+S3method(predictLearner,regr.LiblineaRL2L1SVR)
+S3method(predictLearner,regr.LiblineaRL2L2SVR)
 S3method(predictLearner,regr.avNNet)
 S3method(predictLearner,regr.bartMachine)
 S3method(predictLearner,regr.bcart)
@@ -444,9 +454,12 @@ S3method(trainLearner,WeightedClassesWrapper)
 S3method(trainLearner,classif.IBk)
 S3method(trainLearner,classif.J48)
 S3method(trainLearner,classif.JRip)
-S3method(trainLearner,classif.LiblineaRBinary)
-S3method(trainLearner,classif.LiblineaRLogReg)
-S3method(trainLearner,classif.LiblineaRMultiClass)
+S3method(trainLearner,classif.LiblineaRL1L2SVC)
+S3method(trainLearner,classif.LiblineaRL1LogReg)
+S3method(trainLearner,classif.LiblineaRL2L1SVC)
+S3method(trainLearner,classif.LiblineaRL2LogReg)
+S3method(trainLearner,classif.LiblineaRL2SVC)
+S3method(trainLearner,classif.LiblineaRMultiClassSVC)
 S3method(trainLearner,classif.OneR)
 S3method(trainLearner,classif.PART)
 S3method(trainLearner,classif.ada)
@@ -515,6 +528,8 @@ S3method(trainLearner,cluster.cmeans)
 S3method(trainLearner,cluster.kmeans)
 S3method(trainLearner,multilabel.rFerns)
 S3method(trainLearner,regr.IBk)
+S3method(trainLearner,regr.LiblineaRL2L1SVR)
+S3method(trainLearner,regr.LiblineaRL2L2SVR)
 S3method(trainLearner,regr.avNNet)
 S3method(trainLearner,regr.bartMachine)
 S3method(trainLearner,regr.bcart)
