closes #464, predict.type="se" added to partial predictions
 - new extractor method getPredictionSE
 - new argument 'bounds'
 - new unit test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ S3method(getParamSet,Learner)
 S3method(getParamSet,character)
 S3method(getPredictionResponse,PredictionMultilabel)
 S3method(getPredictionResponse,default)
+S3method(getPredictionSE,default)
 S3method(getPredictionTruth,PredictionCluster)
 S3method(getPredictionTruth,PredictionMultilabel)
 S3method(getPredictionTruth,PredictionSurv)
@@ -663,6 +664,7 @@ export(getNestedTuneResultsX)
 export(getParamSet)
 export(getPredictionProbabilities)
 export(getPredictionResponse)
+export(getPredictionSE)
 export(getPredictionTruth)
 export(getProbabilities)
 export(getRRPredictions)
