fix RMSE aggregation (Fix Issue #468)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -853,8 +853,8 @@ export(test.mean)
 export(test.median)
 export(test.min)
 export(test.range)
+export(test.rmse)
 export(test.sd)
-export(test.sqrt.of.mean)
 export(test.sum)
 export(testgroup.mean)
 export(timeboth)
@@ -870,8 +870,8 @@ export(train.mean)
 export(train.median)
 export(train.min)
 export(train.range)
+export(train.rmse)
 export(train.sd)
-export(train.sqrt.of.mean)
 export(train.sum)
 export(trainLearner)
 export(tuneParams)
