--- a/.travis.yml
+++ b/.travis.yml
@@ -105,8 +105,9 @@ r_binary_packages:
     - tgp
     - TH.data
     - XML
-before_script:
+before_install:
     - sudo R CMD javareconf
+before_script:
     - curl -L https://raw.githubusercontent.com/mllg/travis-r-tools/master/update-packages.r -o /tmp/update-packages.r
     - Rscript /tmp/update-packages.r
     - java -cp /usr/local/lib/R/site-library/RWekajars/java/weka.jar weka.core.WekaPackageManager -install-package thirdparty/XMeans1.0.4.zip
